--- a/css/codesquirl.css
+++ b/css/codesquirl.css
@@ -1,15 +1,112 @@
-* {	
-	box-sizing: border-box;		
+:root {
+	--bg-color: #101112;
+	--default-text-color: #eee;
+	--header-color: #1a1b1c;
+	--header-height: 64px;
+	--footer-color: #18191a;
+	--footer-height: 24px;
+	--toc-color: #191a1b;
+	--h-color: #2585bf;
+	--a-color: #3595cf;
+	--dt-color: #cf9135;
+
+	--scrollbar-light: #3a3b3c;
+	--scrollbar-bg: #1a1b1c;
+}
+
+* {
+	box-sizing: border-box;
+}
+
+/* Works on Firefox */
+* {
+	scrollbar-width: thin;
+	scrollbar-color: var(--scrollbar-light) var(--scrollbar-bg);
+}
+
+/* Works on Chrome, Edge, and Safari */
+*::-webkit-scrollbar {
+	width: 12px;
+}
+
+*::-webkit-scrollbar-track {
+	background: var(--scrollbar-bg);
+}
+
+*::-webkit-scrollbar-thumb {
+	background-color: var(--scrollbar-light);
+	border-radius: 20px;
+	border: 3px solid var(--scrollbar-bg);
 }
 
 html, body {
 	margin: 0;
 	padding: 0;
-
-	background-color: #101112;
-	color: #eee;
-
+	background-color: var(--bg-color);
+	color: var(--default-text-color);
 	font-family: Helvetica, Verdana, sans-serif;
+	font-size: 14px;
+}
+
+h1,h2,h3,h4,h5,h6 {
+	color: var(--h-color);
+}
+h2 {
+	margin-bottom: 4px;
+	border-top: 1px solid var(--h-color);
+	border-bottom: 1px solid var(--h-color);
+}
+h3 {
+	margin-bottom: 4px;
+}
+p {
+	margin-top: 0;
+}
+dt {
+	margin-top: 16px;
+	margin-bottom: 4px;
+	color: var(--dt-color);
+	/*font-weight: bold;*/
+}
+dd {
+	margin-bottom: 4px;
+}
+
+a, a:link, a:visited, a:active {
+	color: var(--a-color);
+	text-decoration: none;
+}
+a:hover {
+	text-decoration: underline;
+}
+
+header {
+	padding: 0;
+	background-color: var(--header-color);
+	height: var(--header-height);
+	display: flex;
+	justify-content: flex-start;
+	align-items: center;
+	border-bottom: 1px solid #444;
+}
+
+header .cs-logo {
+	height: 64px;
+	margin-left: 8px;
+	margin-right: 64px;
+}
+
+footer {
+	padding: 4px;
+	background-color: var(--footer-color);
+	color: #333333;
+	text-align: center;
+	position: fixed;
+	bottom: 0;
+	width: 100vw;
+	height: var(--footer-height);
+	font-size: 12px;
+	border-top: solid 1px #444;
 }
 
 .cs-fullscreen {
@@ -19,10 +116,26 @@ html, body {
 	height: 100vh;
 }
 
+.cs-flex {
+	display: flex;
+}
+.cs-flex.justify-start {
+	justify-content: flex-start;
+}
+.cs-flex.justify-end {
+	justify-content: flex-end;
+}
+.cs-flex.justify-center {
+	justify-content: center;
+}
+.cs-flex.column {
+	flex-direction: column;
+}
+
 .cs-flex-center {
 	display: flex;
 	justify-content: center;
-	align-items: center;	
+	align-items: center;
 }
 
 .cs-maintain {
@@ -30,4 +143,118 @@ html, body {
 	max-height: 90%;
 	min-width: 128px;
 	min-height: 128px;
+}
+
+.cs-content {
+	padding: 8px;
+	width: 100vw;
+	height: calc(100vh - var(--header-height) - var(--footer-height));
+	overflow: auto;
+}
+
+.cs-pad-0 { padding: 0; }
+.cs-pad-8 { padding: 8px; }
+.cs-pad-16 { padding: 16px; }
+
+/* MENU */
+.cs-menu {
+	display: flex;
+	justify-content: flex-start;
+	align-items: center;
+}
+
+/* top-level menu items */
+.cs-menu > .cs-menuitem
+{
+	position: relative;
+	text-align: center;
+	width: 100px;
+	height: 48px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	border: none;
+	margin-left: 4px;
+}
+
+.cs-menu > .cs-menuitem > label {
+	padding: 2px 8px;
+	font-family: Helvetica, Verdana, sans-serif;
+	font-weight: bold;
+	font-size: 16px;
+}
+
+.cs-menu > .cs-menuitem:hover {
+	background-color: #2a2b2c;
+	border: 1px solid #333;
+}
+
+
+.cs-submenu {
+	position: absolute;
+	top: 40px;
+	left: 8px;
+	border: 1px solid #444;
+	background-color: #101112;
+	box-shadow: #222 2px 2px;
+	white-space: nowrap;
+	cursor: pointer;
+	display: none;
+}
+
+.cs-submenu .cs-menuitem {
+	padding: 4px 8px;
+	border: 1px solid #1a1b1c;
+}
+
+.cs-submenu .cs-menuitem a {
+	font-family: Helvetica, Verdana, sans-serif;
+	font-size: 14px;
+	color: #eee;
+	text-decoration: none;
+}
+
+.cs-submenu .cs-menuitem:hover {
+	background-color: #2a2b2c;
+	border: 1px solid #888;
+}
+
+/* TOC */
+.cs-toc {
+	height: 100%;
+	background-color: var(--toc-color);
+	border-right: 1px solid #444;
+	padding: 8px;
+	min-width: 280px;
+	overflow: auto;
+}
+.cs-toc-row {
+	cursor: pointer;
+}
+.cs-toc-row:hover {
+	color: var(--h-color);
+}
+
+.cs-toc-title {
+	text-align: center;
+	font-size: 18px;
+	margin-top: 16px;
+	margin-bottom: 8px;
+}
+.cs-toc-section {
+	margin-top: 8px;
+	font-size: 16px;
+}
+.cs-toc-item {
+	font-size: 14px;
+	padding-left: 16px;
+	margin-top: 4px;
+}
+.cs-toc-bit {
+	font-size: 12px;
+	padding-left: 24px;
+	margin-top: 4px;
+}
+.cs-toc-content {
+	overflow: auto;
 }
